# pyexplain

./: CODE_OF_CONDUCT.md  LICENSE  pyproject.toml
examples/: example_safe_run.py  example_usage.py
pydecode/: __init__.py  _version.py  cli.py  i18n.py  mapping.py
pyexplain/: core.py  i18n.py
tests/: __init__.py  test_cli.py  test_core.py  test_utils.py
